force-app/main/default/objects/Invoice__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>