force-app/main/default/objects/Invoice__c/fields/Add_6_months__c.field-meta.xml
<CustomField>
    <fullName>Add_6_months__c</fullName>
    <formula>DATE( 
YEAR(Choosen_Date__c) + FLOOR( ( MONTH (Choosen_Date__c) + 6 - 1 ) / 12 ), 
MOD( MONTH (Choosen_Date__c) + 6 - 1 + 
IF( DAY (Choosen_Date__c) &gt; CASE( MOD( MONTH(Choosen_Date__c) + 6 - 1, 12 ) + 1, 
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 1, 0 ), 12 ) + 1, 
IF( DAY(Choosen_Date__c) &gt; CASE( MOD( MONTH(Choosen_Date__c) + 6 - 1, 12 ) + 1, 
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 
1, DAY(Choosen_Date__c) 
) 
)</formula>
    <label>Add 6 months</label>
    <type>Date</type>
</CustomField>