force-app/main/default/objects/Invoice__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <label>B</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>A__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>