force-app/main/default/objects/Invoice__c/fields/C__c.field-meta.xml
<CustomField>
    <fullName>C__c</fullName>
    <label>C</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>A__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>