force-app/main/default/objects/Invoice__c/fields/Choosen_Date__c.field-meta.xml
<CustomField>
    <fullName>Choosen_Date__c</fullName>
    <label>Choosen Date</label>
    <type>Date</type>
</CustomField>