force-app/main/default/objects/Invoice__c/fields/contact_photo_id__c.field-meta.xml
<CustomField>
    <fullName>contact_photo_id__c</fullName>
    <label>contact photo id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>