force-app/main/default/objects/Invoice__c/fields/Multi_Depenadant_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Multi_Depenadant_Picklist__c</fullName>
    <label>Multi Depenadant Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>A__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>