force-app/main/default/objects/Invoice__c/fields/Multi_Select_Contolling_field__c.field-meta.xml
<CustomField>
    <fullName>Multi_Select_Contolling_field__c</fullName>
    <label>Multi Select Contolling field</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>