force-app/main/default/objects/Invoice__c/fields/photo_url__c.field-meta.xml
<CustomField>
    <fullName>photo_url__c</fullName>
    <formula>IMAGE(&#39;/servlet/servlet.FileDownload?file=&#39;+contact_photo_id__c, &#39;test&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>photo url</label>
    <type>Text</type>
</CustomField>